--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,6 +31,16 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Checkout (line-protocol)
+        uses: actions/checkout@v4
+        with:
+          repository: c4deszes/bike-line-protocol
+          path: line-protocol
+
+      - name: Setup line-protocol
+        working-directory: line-protocol
+        run: python -m pip install -e .[dev]
+
       - name: Setup Arduino CLI
         uses: arduino/setup-arduino-cli@v1
 
@@ -41,7 +51,7 @@ jobs:
 
       - name: Build sketch
         working-directory: examples/arduino
-        run: arduino-cli compile -b arduino:samd:arduino_zero_edbg --library ../..
+        run: arduino-cli compile -b arduino:samd:arduino_zero_edbg --library ../../line-protocol
 
   python_test:
     name: Python Test
@@ -50,6 +60,16 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
+      - name: Checkout (line-protocol)
+        uses: actions/checkout@v4
+        with:
+          repository: c4deszes/bike-line-protocol
+          path: line-protocol
+
+      - name: Setup line-protocol
+        working-directory: line-protocol
+        run: python -m pip install -e .[dev]
 
       - name: Setup Python library
         working-directory: python-lib
