--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,10 +37,6 @@ jobs:
           repository: c4deszes/bike-line-protocol
           path: line-protocol
 
-      - name: Setup line-protocol
-        working-directory: line-protocol
-        run: python -m pip install -e .[dev]
-
       - name: Setup Arduino CLI
         uses: arduino/setup-arduino-cli@v1
 
@@ -68,7 +64,7 @@ jobs:
           path: line-protocol
 
       - name: Setup line-protocol
-        working-directory: line-protocol
+        working-directory: line-protocol/python-lib
         run: python -m pip install -e .[dev]
 
       - name: Setup Python library
