--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -4,6 +4,12 @@ function(add_test TARGET)
     gtest_discover_tests(${TARGET} DISCOVERY_MODE POST_BUILD)
 endfunction()
 
+add_custom_target(
+    coverage
+    COMMAND ${Python_EXECUTABLE} -m gcovr --html-self-contained --html-details ${CMAKE_BINARY_DIR}/coverage.html
+    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
+)
+
 ## Application mode tests
 add_executable(test_FlashLine_App EXCLUDE_FROM_ALL)
 target_sources(test_FlashLine_App PRIVATE
@@ -12,7 +18,6 @@ target_sources(test_FlashLine_App PRIVATE
 target_link_libraries(test_FlashLine_App PRIVATE
     flash-line-api flash-line-sources
     line-protocol-api line-protocol-sources
-    line-protocol-adapter-sources
 )
 add_test(test_FlashLine_App)
 
@@ -24,6 +29,5 @@ target_sources(test_FlashLine_Bootloader PRIVATE
 target_link_libraries(test_FlashLine_Bootloader PRIVATE
     flash-line-api flash-line-sources
     line-protocol-api line-protocol-sources
-    line-protocol-adapter-sources
 )
 add_test(test_FlashLine_Bootloader)
